# yolov8_ros2

object_detection/: CMakeLists.txt  package.xml
object_detection/include/object_detection/: pointcloud_filter_srv.hpp
object_detection/scripts/: yolov8_luci.py
object_detection/src/: pointcloud_filter_node.cpp  pointcloud_filter_srv.cpp
object_detection_interfaces/: CMakeLists.txt
object_detection_interfaces/srv/: FilterPointcloud.srv
